# wardex

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT_TRANSPARENCY.md  LICENSE  README.md  SECURITY.md  com.threatcraft.wardex.plist  install.sh  pyproject.toml
config/: wardex.yaml
docs/: THREAT_MODEL.md
scripts/: bundle-capture.sh
tests/: test_policy.py
wardex/: __init__.py  __main__.py  daemon.py  marketplace.py  policy.py  quarantine.py
