[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wardex"
version = "0.1.0"
description = "Warden for your VS Code extensions. Pre-install enforcement at the macOS OS layer."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Threatcraft" }]
requires-python = ">=3.11"
dependencies = [
    "watchdog>=4.0.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.4.0",
]

[project.scripts]
wardex = "wardex.__main__:cli"

[tool.setuptools.packages.find]
include = ["wardex*"]

[tool.ruff]
line-length = 100
target-version = "py311"